--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <script src="lojic.js"></script>
 </head>
-<body>
+<body> "Esto es un tiulo en html";
     
 </body>
 </html>
